--- a/css/services.css
+++ b/css/services.css
@@ -9,7 +9,7 @@ body{
   flex-direction: column;
   min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 
@@ -27,7 +27,6 @@ header{
   padding: 30px;
   min-height: 100px;
   border-bottom: 5px solid red;
-  overflow: hidden;
 }
 
 header p{
@@ -38,7 +37,6 @@ header p{
 }
 
 nav li{
-  display: inline-block;
   list-style: none;
   /* margin-right: 5%; */
   font-size: min(4vw, 1.2rem);
@@ -71,7 +69,7 @@ a:hover{
   /* display: inline-block; */
   position: absolute;
   right: 30px;
-  top:90px;
+  top:80px;
   cursor: pointer;
   z-index: 9999;
 }
@@ -105,23 +103,24 @@ margin: 3px auto 0;
 
 .nav-menu{
   background-color:#000000c5;
-  position: absolute;
+  position: fixed;
   top: 75px;
   right: 0;
-  width: 300px;
+  width: 70%;
   min-height: 300px;
   justify-content: center;
   display: flex;
   flex-direction: column;
   gap: 2rem;
   border-radius: 10px;
-  margin-right:-300% ;
+  right:-100% ;
+  transition: 0.5s;
 }
 
 .nav-menu.active{
-  margin-right: 0;
+  right: 0;
   transition: 0.7s;
-  z-index: 8000;
+  /* z-index: 8000; */
 }
 
 /* hero section */
@@ -149,7 +148,8 @@ h1{
   padding: 2rem;
   background-color: hsl(227, 74%, 25%);
   color:#ffff ;
-  animation: slide-in 2s;
+  animation: sli
+  de-in 2s;
 }
 
 @keyframes slide-in{
@@ -315,7 +315,7 @@ footer{
     position: relative;
     top: 0;
     right: 0;
-    width: 100%;
+    width: 70%;
     min-height: 0;
     justify-content: space-evenly;
     flex-direction: row;
